--- a/ramdisk/init.qcom.rc
+++ b/ramdisk/init.qcom.rc
@@ -44,9 +44,9 @@ on boot
     chown bluetooth bluetooth /sys/class/rfkill/rfkill0/state
     chown bluetooth bluetooth /proc/bluetooth/sleep/proto
     chown system system /sys/module/sco/parameters/disable_esco
-#    chown bluetooth bluetooth /sys/module/hci_smd/parameters/hcismd_set
+    chown bluetooth bluetooth /sys/module/hci_smd/parameters/hcismd_set
     chmod 0660 /sys/module/bluetooth_power/parameters/power
-#    chmod 0660 /sys/module/hci_smd/parameters/hcismd_set
+    chmod 0660 /sys/module/hci_smd/parameters/hcismd_set
     chmod 0660 /sys/class/rfkill/rfkill0/state
     chmod 0660 /proc/bluetooth/sleep/proto
     chown bluetooth bluetooth /dev/ttyHS0
@@ -66,7 +66,7 @@ on boot
     setprop wifi.interface wlan0
 
     # Enable Bluetooth 802.11 PAL when Bluetooth is turned on
-    setprop ro.config.bt.amp no
+    setprop ro.config.bt.amp yes
 
     # permissions for NFC
     chmod 0600 /dev/pn544
@@ -124,7 +124,7 @@ on boot
 # msm specific files that need to be created on /data
 on post-fs-data
 
-#    mkdir /data/misc/bluetooth 0770 bluetooth bluetooth
+mkdir /data/misc/bluetooth 0770 bluetooth bluetooth
 
     # Create the directories used by the Wireless subsystem
     mkdir /data/misc/wifi 0770 wifi wifi
@@ -162,8 +162,8 @@ on post-fs-data
     symlink /data/misc/wifi/wpa_supplicant /data/system/wpa_supplicant
 
     #Create directories for wiper services
-    #mkdir /data/wpstiles/ 0755 shell
-    #mkdir /data/wiper 0755 location qcom_oncrpc
+    mkdir /data/wpstiles/ 0755 shell
+    mkdir /data/wiper 0755 location qcom_oncrpc
 
     #Create directories for gpsone_daemon services
     mkdir /data/misc/gpsone_d 0770 system system
@@ -176,7 +176,7 @@ on post-fs-data
     mkdir /data/misc/location/mq 0770 gps gps
 
     #Create directory from IMS services
-    #mkdir /data/shared 0755
+    mkdir /data/shared 0755
 
     #Create directory for FOTA
     mkdir /data/fota 0771
@@ -193,9 +193,8 @@ on post-fs-data
 
 # Export GPIO56 for fusion targets to enable/disable hub
 service usbhub_init /system/bin/usbhub_init
-   class late_start
+   class main
    user root
-   disabled
    oneshot
 
 on property:ro.board.platform=msm7630_fusion
@@ -207,19 +206,18 @@ on property:init.svc.wpa_supplicant=stopped
 on property:init.svc.p2p_supplicant=stopped
     stop dhcpcd
 
-#on property:bluetooth.isEnabled=true
-#    start btwlancoex
-#    start amp_load
-#    write /sys/class/bluetooth/hci0/idle_timeout 7000
+on property:bluetooth.isEnabled=true
+start btwlancoex
+start amp_load
+write /sys/class/bluetooth/hci0/idle_timeout 0
 
-#on property:bluetooth.isEnabled=false
-#    start amp_unload
-#    stop btwlancoex
+on property:bluetooth.isEnabled=false
+start amp_unload
+stop btwlancoex
 
 service cnd /system/bin/cnd
-    class late_start
+    class main
     socket cnd stream 666 root radio
-    disabled
 
 on property:persist.cne.UseCne=vendor
     start cnd
@@ -228,96 +226,85 @@ on property:persist.cne.UseCne=Vendor
     start cnd
 
 service rmt_storage /system/bin/rmt_storage /dev/block/mmcblk0p14 /dev/block/mmcblk0p15
-    class late_start
+    class main
     user root
-    disabled
 
 on property:ro.emmc=1
     start rmt_storage
 
-#service hciattach /system/bin/sh /system/etc/init.qcom.bt.sh
-#    class late_start
-#    user bluetooth
-#    group qcom_oncrpc bluetooth net_bt_admin
-#    disabled
-#    oneshot
+service hciattach /system/bin/sh /system/etc/init.qcom.bt.sh
+class main
+user bluetooth
+group qcom_oncrpc bluetooth net_bt_admin
+oneshot
 
-#service bt-dun /system/bin/dun-server /dev/smd7 /dev/rfcomm0
-#    class late_start
-#    disabled
-#    oneshot
+service bt-dun /system/bin/dun-server /dev/smd7 /dev/rfcomm0
+class main
+oneshot
 
-#service bt-sap /system/bin/sapd 15
-#    class late_start
-#    disabled
-#    oneshot
+service bt-sap /system/bin/sapd 15
+class main
+oneshot
 
 #BCM
-service hciattach /system/bin/brcm_patchram_plus --enable_hci --enable_lpm \
+service hciattach /system/bin/brcm_patchram_plus --enable_hci --enable_lpm
    --no2bytes --tosleep=50000 \
    --use_baudrate_for_download --baudrate 3000000 --patchram /etc/firmware/bcm4330B1.hcd /dev/ttyHS0    
     class main
     user bluetooth
     group bluetooth net_bt_admin
-    disabled
 
 #HCI_ENABLE_BT_DEV_UNDER_TEST_MODE
 service bt_dut_cmd /system/bin/bcm_dut
     group bluetooth net_bt_admin
     class main
-    disabled
     oneshot
 
-#service sapd /system/bin/sdptool add --channel=15 SAP
-#    class late_start
-#    user bluetooth
-#    group bluetooth net_bt_admin
-#    disabled
-#    oneshot
-#service dund /system/bin/sdptool add --channel=1 DUN
-#    class late_start
-#    user bluetooth
-#    group bluetooth net_bt_admin
-#    disabled
-#    oneshot
+service sapd /system/bin/sdptool add --channel=15 SAP
+class late_start
+user bluetooth
+group bluetooth net_bt_admin
+oneshot
+
+service dund /system/bin/sdptool add --channel=1 DUN
+class main
+user bluetooth
+group bluetooth net_bt_admin
+oneshot
+
 service bridgemgrd /system/bin/bridgemgrd
-    class late_start
+    class main
     user radio
     group radio
-    disabled
 
 service port-bridge /system/bin/port-bridge /dev/smd0 /dev/ttyGS0
-    class late_start
+    class main
     user system
     group system inet
-    disabled
 
 on property:ro.baseband="msm"
     # Enable BT-DUN only for all msms
-    # setprop ro.qualcomm.bluetooth.dun true
+    setprop ro.qualcomm.bluetooth.dun true
 
 service qmiproxy /system/bin/qmiproxy
-    class late_start
+    class main
     user radio
     group radio
-    disabled
 
 # QMUX must be in multiple groups to support external process connections
 service qmuxd /system/bin/qmuxd
-    class late_start
+    class main
     user root
     group radio audio bluetooth
-    disabled
 
 service netmgrd /system/bin/netmgrd
-    class late_start
+    class main
     disabled
 
 service sensors /system/bin/sensors.qcom
-    class late_start
+    class main
     user root
     group root
-    disabled
 
 on property:ro.use_data_netmgrd=false
     # netmgr not supported on specific target
@@ -328,65 +315,57 @@ on property:ro.use_data_netmgrd=false
 on property:ro.data.large_tcp_window_size=true
     write /proc/sys/net/ipv4/tcp_adv_win_scale  1
 
-#service btwlancoex /system/bin/sh /system/etc/init.qcom.coex.sh
-#    class late_start
-#    user bluetooth
-#    group bluetooth net_bt_admin inet net_admin net_raw
-#    disabled
-#    oneshot
+service btwlancoex /system/bin/sh /system/etc/init.qcom.coex.sh
+class late_start
+user bluetooth
+group bluetooth net_bt_admin inet net_admin net_raw
+oneshot
 
-#service amp_init /system/bin/amploader -i
-#    class late_start
-#    user root
-#    disabled
-#    oneshot
+service amp_init /system/bin/amploader -i
+class late_start
+user root
+oneshot
 
-#service amp_load /system/bin/amploader -l 7000
-#    class late_start
-#    user root
-#    disabled
-#    oneshot
+service amp_load /system/bin/amploader -l 7000
+class late_start
+user root
+oneshot
 
-#service amp_unload /system/bin/amploader -u
-#    class late_start
-#    user root
-#    disabled
-#    oneshot
+service amp_unload /system/bin/amploader -u
+class main
+user root
+oneshot
 
-service wpa_supplicant /system/bin/wpa_supplicant \
+service wpa_supplicant /system/bin/wpa_supplicant
     -Dnl80211 -iwlan0 -puse_p2p_group_interface=1 -e/data/misc/wifi/entropy.bin
     #   we will start as root and wpa_supplicant will switch to user wifi
     #   after setting up the capabilities required for WEXT
-    #   user wifi
-    #   group wifi inet keystore
+    user wifi
+    group wifi inet keystore
     class main
     socket wpa_wlan0 dgram 0660 wifi wifi
-    disabled
     oneshot
 
-service p2p_supplicant /system/bin/wpa_supplicant \
-    -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf -N \
+service p2p_supplicant /system/bin/wpa_supplicant
+    -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf -N
     -ip2p0 -Dnl80211 -c/data/misc/wifi/p2p_supplicant.conf -e/data/misc/wifi/entropy.bin -puse_p2p_group_interface=1
     #   we will start as root and wpa_supplicant will switch to user wifi
     #   after setting up the capabilities required for WEXT
-    #   user wifi
-    #   group wifi inet keystore
+    user wifi
+    group wifi inet keystore
     class main
     socket wpa_wlan0 dgram 0660 wifi wifi
-    disabled
     oneshot
 
 #for WiFi MFG(TestMode)
 service mfgloader /system/bin/mfgloader
     class main
-    disabled
     oneshot
 
 service wlandutservice /system/bin/wlandutservice
     class main
     user system
     group wifi net_raw net_admin system inet
-    disabled
     oneshot
 
 service macloader /system/bin/macloader
@@ -396,37 +375,30 @@ service macloader /system/bin/macloader
 
 service dhcpcd_wlan0 /system/bin/dhcpcd -aABKL
     class main
-    disabled
     oneshot
 
 service dhcpcd_p2p /system/bin/dhcpcd -aABKL
     class main
-    disabled
     oneshot
 
 service dhcpcd_bnep0 /system/bin/dhcpcd -ABKL
     class main
-    disabled
     oneshot
 
 service dhcpcd_eth0 /system/bin/dhcpcd -ABKL
     class main
-    disabled
     oneshot
 
 service iprenew_wlan0 /system/bin/dhcpcd -n
     class main
-    disabled
     oneshot
 
 service iprenew_p2p /system/bin/dhcpcd -n
     class main
-    disabled
     oneshot
 
 service iprenew_bnep0 /system/bin/dhcpcd -n
     class main
-    disabled
     oneshot
 
 # I-WLAN
@@ -441,28 +413,24 @@ service wiperiface /system/bin/wiperiface
     oneshot
 
 service gpsone_daemon /system/bin/gpsone_daemon
-    class late_start
+    class main
     user system
     group system qcom_oncrpc inet
-    disabled
 
 service quipc_igsn /system/bin/quipc_igsn
-    class late_start
+    class main
     user gps
     group inet gps
-    disabled
 
 service quipc_main /system/bin/quipc_main
-    class late_start
+    class main
     user gps
     group net_admin wifi inet gps
-    disabled
 
 service fm_dl /system/bin/sh /system/etc/init.qcom.fm.sh
-    class late_start
+    class main
     user root
     group system qcom_oncrpc
-    disabled
     oneshot
 
 on property:crypto.driver.load=1
@@ -474,9 +442,8 @@ on property:crypto.driver.load=0
      exec /system/bin/rmmod qce.ko
 
 service drmdiag /system/bin/drmdiagapp
-    class late_start
+    class main
      user root
-     disabled
      oneshot
 
 on property:drmdiag.load=1
@@ -486,19 +453,18 @@ on property:drmdiag.load=0
     stop drmdiag
 
 service qcom-sh /system/bin/sh /init.qcom.sh
-    class late_start
+    class main
     user root
     oneshot
 
 service qcom-post-boot /system/bin/sh /system/etc/init.qcom.post_boot.sh
-    class late_start
+    class main
     user root
-    disabled
     oneshot
 
-#service qcom-wifi /system/bin/sh /system/etc/init.qcom.wifi.sh
-#    class late_start
-#    oneshot
+service qcom-wifi /system/bin/sh /system/etc/init.qcom.wifi.sh
+class main
+oneshot
 
 on property:init.svc.bootanim=stopped
     start qcom-post-boot
@@ -506,38 +472,34 @@ on property:init.svc.bootanim=stopped
 on property:sys.boot_completed=1
     start qcom-post-boot
 
-#service atfwd /system/bin/ATFWD-daemon
-#    class late_start
-#    user system
-#    group system radio
-#    onrestart /system/bin/log -t RIL-ATFWD -p w "ATFWD daemon restarted"
+service atfwd /system/bin/ATFWD-daemon
+class main
+user system
+group system radio
+onrestart /system/bin/log -t RIL-ATFWD -p w "ATFWD daemon restarted"
 
 service hdmid /system/bin/hdmid
-    class late_start
+    class main
     socket hdmid stream 0660 root system graphics
-    disabled
 
 on property:ro.hdmi.enable=true
     start hdmid
 
 service abld /system/bin/mm-abl-daemon
-    class late_start
-    disabled
+    class main
 
 service ds_fmc_appd /system/bin/ds_fmc_appd -p "rmnet0" -D
-    class late_start
+    class main
     group radio
-    disabled
     oneshot
 
 on property:persist.data.ds_fmc_app.mode=1
     start ds_fmc_appd
 
 service ims_regmanager /system/bin/exe-ims-regmanagerprocessnative
-    class late_start
+    class main
     user system
     group qcom_oncrpc net_bt_admin inet radio wifi
-    disabled
 
 on property:persist.ims.regmanager.mode=1
     start ims_regmanager
@@ -547,68 +509,63 @@ on property:ro.data.large_tcp_window_size=true
     write /proc/sys/net/ipv4/tcp_adv_win_scale  1
 
 service thermald /system/bin/thermald
-    class late_start
+    class main
     user root
     group root
-    disabled
 
 on property:persist.thermal.monitor=true
     start thermald
 
-#service time_daemon /system/bin/time_daemon
-#    class late_start
-#    user root
-#    group root
-#    oneshot
-#    disabled
+service time_daemon /system/bin/time_daemon
+class main
+user root
+group root
+oneshot
 
-#on property:persist.timed.enable=true
-#    start time_daemon
+on property:persist.timed.enable=true
+start time_daemon
 
-#service ftp /system/bin/sdptool add --psm=5257 --channel=20 FTP
-#    class late_start
-#    user bluetooth
-#    group bluetooth net_bt_admin
-#    disabled
-#    oneshot
+service ftp /system/bin/sdptool add --psm=5257 --channel=20 FTP
+class main
+user bluetooth
+group bluetooth net_bt_admin
+oneshot
 
-#service map0 /system/bin/sdptool add --channel=16 MAS0
-#    class late_start
-#    user bluetooth
-#    group bluetooth net_bt_admin
-#    disabled
-#    oneshot
+service map0 /system/bin/sdptool add --channel=16 MAS0
+class main
+user bluetooth
+group bluetooth net_bt_admin
+oneshot
 
-#service map1 /system/bin/sdptool add --channel=17 MAS1
-#    class late_start
-#    user bluetooth
-#    group bluetooth net_bt_admin
-#    disabled
-#    oneshot
+service map1 /system/bin/sdptool add --channel=17 MAS1
+class main
+user bluetooth
+group bluetooth net_bt_admin
+oneshot
 
 service ril-daemon1 /system/bin/rild -c 1
-    class late_start
+    class main
     socket rild1 stream 660 root radio
     socket rild-debug1 stream 660 radio system
     user root
-    disabled
     group radio cache inet misc audio sdcard_rw qcom_oncrpc diag
 
 service profiler_daemon /system/bin/profiler_daemon
-    class late_start
+    class main
     user root
     group root
-    disabled
 
 service sdcard /system/bin/sdcard /data/media 1023 1023
-    class late_start
-    disabled
+    class main
 
 on property:persist.fuse_sdcard=true
     start sdcard
 
-#service hcidump /system/bin/sh /system/etc/hcidump.sh
-#    user bluetooth
-#    group bluetooth system net_bt_admin net_admin
-#    disabled
-#    oneshot
+on property:persist.fuse_sdcard=false
+   stop sdcard
+   
+
+service hcidump /system/bin/sh /system/etc/hcidump.sh
+user bluetooth
+group bluetooth system net_bt_admin net_admin
+oneshot
