--- a/ramdisk/init.emmc.rc
+++ b/ramdisk/init.emmc.rc
@@ -140,7 +140,7 @@ on emmc-fs
 # Define TCP buffer sizes for various networks
 #   ReadMin, ReadInitial, ReadMax, WriteMin, WriteInitial, WriteMax,
     setprop net.tcp.buffersize.default 4096,87380,110208,4096,16384,110208
-#    setprop net.tcp.buffersize.wifi    524288,1048576,2097152,262144,524288,1048576
+    setprop net.tcp.buffersize.wifi    524288,1048576,2097152,262144,524288,1048576
     setprop net.tcp.buffersize.wifi    4095,131072,196608,4096,16384,110208
     setprop net.tcp.buffersize.lte     4094,87380,2560000,4096,16384,1220608
     setprop net.tcp.buffersize.umts    4094,87380,196608,4096,16384,110208
@@ -149,7 +149,6 @@ on emmc-fs
     setprop net.tcp.buffersize.hsdpa   4094,87380,704512,4096,16384,110208
     setprop net.tcp.buffersize.edge    4093,26280,35040,4096,16384,35040
     setprop net.tcp.buffersize.gprs    4092,8760,11680,4096,8760,11680
-    setprop net.tcp.buffersize.evdo_b  4094,87380,262144,4096,16384,262144
 
 # Assign TCP buffer thresholds to be ceiling value of technology maximums
 # Increased technology maximums should be reflected here.
@@ -245,7 +244,7 @@ service secril-daemon /system/bin/sec-ril
 
 # serial keyboard daemon
 service sec_keyboard /system/bin/sec_keyboard /dev/ttyHSL0
-    class late_start
+    class main
     group system
 
 # Vibetonz
